// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> renders SearchBar properly 1`] = `
<form
  class="rf-search-bar"
  data-testid="search-bar"
  role="search"
>
  <label
    class="rf-label"
    for="xxxxxxx"
  >
    SearchBar du gouvernement
  </label>
  <input
    class="rf-input"
    data-testid="search-input"
    id="xxxxxxx"
    placeholder=""
    type="search"
    value=""
  />
  <button
    class="rf-btn"
    title="Rechercher"
    type="button"
  >
    Rechercher
  </button>
</form>
`;

exports[`<SearchBar /> renders large SearchBar properly 1`] = `
<form
  class="rf-search-bar rf-search-bar--lg"
  data-testid="search-bar"
  role="search"
>
  <label
    class="rf-label"
    for="xxxxxxx"
  >
    SearchBar du gouvernement
  </label>
  <input
    class="rf-input"
    data-testid="search-input"
    id="xxxxxxx"
    placeholder=""
    type="search"
    value=""
  />
  <button
    class="rf-btn rf-btn--lg"
    title="Rechercher"
    type="button"
  >
    Rechercher
  </button>
</form>
`;
